--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require-dev": {
         "symfony/var-dumper": "^5.3",
         "phpunit/phpunit": "^9.5",
-        "carbondate/carbon": "1.33.0",
+        "nesbot/carbon": "^2.59.1",
         "mockery/mockery": "^1.4"
     },
     "license": "WTFPL",
